Fixed responsive page and the navbar assignment.

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,5 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
 
+/* Navbar */
+
+/*.rm-default.rm-desktop .selected,
+.rm-default.rm-desktop .selected-parent,
+.rm-default.rm-desktop .selected.selected-parent {
+    color: black;
+}
+
+.rm-default.rm-mobile .selected,
+.rm-default.rm-mobile .selected-parent,
+.rm-default.rm-mobile .selected.selected-parent,
+.rm-default.rm-mobile.rm-clicked .selected,
+.rm-default.rm-mobile.rm-clicked .selected-parent,
+.rm-default.rm-mobile.rm-clicked .selected.selected-parent {
+    background-color: #333;
+}*/
+
+@media only screen and (max-width: 960px) {
+    body {
+        max-width: 100%;
+        max-height: 100%;
+        margin-bottom: 1em;
+        overflow-x: hidden;
+    }
+}
+
 html {
     background-image: url("../img/background.png");
     background-attachment: fixed;
@@ -7,24 +33,47 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    max-width: 100%;
 }
 
 body {
     margin: auto;
     padding: 8px;
-    max-width: 1050px;
-    font-family: "Times New Roman";
+    max-width: 960px;
+    font-family: "Arial";
+    font-size: 16px;
     overflow-y: scroll;
 }
+
+img {
+    max-width: 100%;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.figleft {
+    float: left;
+    margin-right: 10px;
+}
+
+.figright {
+    float: right;
+    margin-left: 10px;
+}
+
+.site-header {
+    overflow: auto; /* clear fix to make div span all elements */
+}
+
 .transparent {
     background-image: url("../img/transparent2.png");
 }
 
 .navbar {
     text-align: center;
-    width: 1050px;
-    padding-bottom: 15px;
-    padding-top: 0.2px;
+    max-width: 960px;
+    padding-bottom: 13px;
+    padding-top: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
     font-family: "Abril Fatface";
 }
@@ -59,7 +108,7 @@ body {
 }
 
 article {
-    margin-top: 300px;
+    margin-top: 10px;
     padding: 20px;
     padding-bottom: 40px;
     padding-top: 0.1px;
@@ -75,21 +124,17 @@ article h1, h2, h3, h4 {
     font-family: "Abril Fatface";
 }
 
-article p {
-    font-size: 18px;
-}
-
 a {
     text-decoration: none;
-    color: #666;
+    color: #ff7b00;
 }
 
 a:link {
-    color: #666;
+    color: #ff7b00;
 }
 
 a:visited {
-    color: #666;
+    color: #ff7b00;
 }
 
 a:hover {
@@ -109,7 +154,7 @@ a:hover {
 }
 
 .site-footer {
-    margin-top: 35px;
+    margin-top: 15px;
     text-align: center;
     padding: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
